[package]
name = "stomp-basic-examples"
version = "0.1.0"
edition = "2021"

# Main example as default binary
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
stomp-activemq-autoscale = { path = "../.." }
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }